[gd_scene load_steps=10 format=3 uid="uid://duuomrts5u32e"]

[ext_resource type="Script" path="res://wisp_spell.gd" id="1_6shtj"]
[ext_resource type="Texture2D" uid="uid://j782hjmt8fig" path="res://graphics/projectiles/wisp_spell.png" id="2_fekrt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q0md7"]
atlas = ExtResource("2_fekrt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0w2c"]
atlas = ExtResource("2_fekrt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrgi6"]
atlas = ExtResource("2_fekrt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_336px"]
atlas = ExtResource("2_fekrt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0ros"]
atlas = ExtResource("2_fekrt")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_toq7s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0md7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0w2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrgi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_336px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ros")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_138q2"]
radius = 3.80058

[node name="wisp_Spell" type="Area2D"]
texture_filter = 1
scale = Vector2(5, 5)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6shtj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.4, -1.2)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_toq7s")
autoplay = "default"
frame_progress = 0.175282

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.2, 0.4)
shape = SubResource("CircleShape2D_138q2")

[node name="spellDuration" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="spellDuration" to="." method="_on_spell_duration_timeout"]
